objects/Location.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Conga</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Conga</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Ancillary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ancillary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ancillary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations/Facilities (Ancillary)</relationshipLabel>
        <relationshipName>Locations_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Builders_risk_coverage_needed__c</fullName>
        <label>Builders risk coverage needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Improvement__c</fullName>
        <description>Conga</description>
        <label>Building Improvement</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Interruption_Value__c</fullName>
        <description>Conga</description>
        <label>Business Interruption Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Central_Alarm_Yes_No__c</fullName>
        <description>Used in Conga Document Carrier Quarterly Locations. It is not on the page layout</description>
        <formula>IF(Central_Alarm__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[deprecated] Central Alarm Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Alarm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <label>Central Alarm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cert_Occup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <inlineHelpText>Does this location have a Certificate of Occupancy?</inlineHelpText>
        <label>Cert Occup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Conga</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga - In order to add relevant data for the Under Construction tab in the Insurance Carrier output, we need a field to identify the specific criteria that identify a record’s value as belonging to one or more of those sheets. This field will be marked true when the related record needs to be included.</description>
        <label>ConstCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constr_Cert_of_Liability_Ins_Obtained__c</fullName>
        <description>Construction Company Certificates of Liability Ins Obtained</description>
        <label>Const Co Certs of Liability Ins Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Cost__c</fullName>
        <description>Conga</description>
        <label>Construction Cost</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Project_Description__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Construction Project Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Security_Measures__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Construction Security Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Type1__c</fullName>
        <description>Conga</description>
        <label>Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(1) Fire Resistive/Heavy NC</fullName>
                </value>
                <value>
                    <fullName>(2) Steel Deck &amp; Other Light NC</fullName>
                </value>
                <value>
                    <fullName>(3) Heavy Timber</fullName>
                </value>
                <value>
                    <fullName>(4) Masonry Joist</fullName>
                </value>
                <value>
                    <fullName>(5) Frame</fullName>
                </value>
                <value>
                    <fullName>(6) Other</fullName>
                </value>
                <value>
                    <fullName>(8) Boards on Joist</fullName>
                </value>
                <value>
                    <fullName>(9) Brick</fullName>
                </value>
                <value>
                    <fullName>(10) Wood Frame</fullName>
                </value>
                <value>
                    <fullName>(11) Masonry Non-Combustible</fullName>
                </value>
                <value>
                    <fullName>(12) Concrete</fullName>
                </value>
                <value>
                    <fullName>(13) Cinder Block</fullName>
                </value>
                <value>
                    <fullName>(14) Steel Deck (combustible)</fullName>
                </value>
                <value>
                    <fullName>(15) Wood Truss on Steel</fullName>
                </value>
                <value>
                    <fullName>(17) Plywood on Lam. Beams</fullName>
                </value>
                <value>
                    <fullName>(18) Protected Steel</fullName>
                </value>
                <value>
                    <fullName>(20) Plywood on Glue Lam./Wood Frame</fullName>
                </value>
                <value>
                    <fullName>(22) Plywood on Lam. Beams/Tilt-Up Concrete</fullName>
                </value>
                <value>
                    <fullName>(23) Un-improved land</fullName>
                </value>
                <value>
                    <fullName>(24) Non-combustible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Reviewed_by_ARMS__c</fullName>
        <label>Contract Reviewed by ARMS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_of_Renovations__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Description of Renovations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Headcount__c</fullName>
        <description>Conga</description>
        <label>Employee Headcount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excavation_or_Subsurface_Yes_No__c</fullName>
        <formula>IF(Excavation_or_Subsurface__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[deprecatExcavation or Subsurface Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excavation_or_Subsurface__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <label>Excavation or Subsurface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exposure__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Exposure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exterior Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FacilitiesForConga__c</fullName>
        <description>Conga</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Facilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Account_Name_Formula__c</fullName>
        <formula>Facility_Location__r.Affiliate_Ancillary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Account Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Address_1_Formula__c</fullName>
        <formula>Facility_Location__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Address 1 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Address_2_Formula__c</fullName>
        <formula>Facility_Location__r.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Address 2 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_City_Formula__c</fullName>
        <formula>Facility_Location__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility City Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_State_Formula__c</fullName>
        <formula>Facility_Location__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility State Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Education Center</fullName>
                </value>
                <value>
                    <fullName>Express Center</fullName>
                </value>
                <value>
                    <fullName>Facility Under Construction</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Medical Center</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking Lot</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>School-Based Health Center</fullName>
                </value>
                <value>
                    <fullName>Secondary Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Zipcode_Formula__c</fullName>
        <formula>Facility_Location__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Zipcode Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_Up_Construction_Yes_No__c</fullName>
        <formula>IF(Ground_up_Construction__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ground Up Construction Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_up_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <label>Ground up Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Hazard_Flood_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Hazard Flood Zone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_work_during_construction__c</fullName>
        <label>Hot work during construction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interior_Renovation_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <label>Interior Renovation Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interior_Renovation_Yes_No__c</fullName>
        <formula>IF(Interior_Renovation_Only__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interior Renovation Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Status__c</fullName>
        <label>Internal Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Value__c</fullName>
        <description>Conga</description>
        <label>Inventory Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leased_to_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leased to 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Address_TEST__c</fullName>
        <formula>Facility_Location__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address (TEST)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Facility_ID__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Location or Facility ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIP_Status__c</fullName>
        <label>NFIP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Self Insure</fullName>
                </value>
                <value>
                    <fullName>NFIP Local</fullName>
                </value>
                <value>
                    <fullName>NFIP through ARMS/Marsh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewLocCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga - In order to add relevant data for the New Locations tab in the Insurance Carrier output, we need a field to identify the specific criteria that identify a record’s value as belonging to one or more of those sheets. This field will be marked true when the related record needs to be included.</description>
        <label>NewLocCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Conga</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Occupancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owned_Ancillary_Operated_Affiliate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owned Ancillary/ Operated Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owned_Leased__c</fullName>
        <description>Conga</description>
        <label>Owned/Leased</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Property_Value__c</fullName>
        <description>Conga</description>
        <label>Personal Property Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plumbing_or_Piping_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <label>Plumbing or Piping Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plumbing_or_Piping_Yes_No__c</fullName>
        <formula>IF(Plumbing_or_Piping_Work__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plumbing or Piping Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Quarter__c</fullName>
        <description>This provides a merge field used by Conga for the Quarterly Insurance Carrier update.</description>
        <formula>CASE( MONTH( ( TODAY() ) ),
4, &apos;Q1 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
5, &apos;Q1 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
6, &apos;Q1 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
7, &apos;Q2 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
8, &apos;Q2 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
9, &apos;Q2 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
10,&apos;Q3 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
11,&apos;Q3 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
12,&apos;Q3 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
1,&apos;Q4 - &apos;&amp; TEXT(YEAR(( TODAY() ))-1),
2,&apos;Q4 - &apos;&amp; TEXT(YEAR(( TODAY() ))-1),
3,&apos;Q4 - &apos;&amp; TEXT(YEAR(( TODAY() ))-1),
&apos;0&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates prior quarter from today for the Insurance Carrier merge output.</inlineHelpText>
        <label>Previous Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Property_Value__c</fullName>
        <description>Conga</description>
        <label>Real Property Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renovations_or_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renovations or Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retro_Fitting_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Retro-Fitting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seismic_Upgrades__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Seismic Upgrades</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Status__c</fullName>
        <label>Special Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Construction - Occupied</fullName>
                </value>
                <value>
                    <fullName>Under Construction - Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Undeveloped Land</fullName>
                </value>
                <value>
                    <fullName>Leased to Third-Party</fullName>
                </value>
                <value>
                    <fullName>Leased to Third Party - Under Construction - Occupied</fullName>
                </value>
                <value>
                    <fullName>Leased to Third Party - Under Construction - Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Ancillary Owned-Affiliate Operated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sprinkler_Percent__c</fullName>
        <description>Conga</description>
        <label>Sprinkler Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sprinkler_Protected_Yes_No__c</fullName>
        <description>Used in Conga Document Carrier Quarterly Locations. It is not on the page layout</description>
        <formula>IF(Sprinkler_Protected__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprinkler Protected Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprinkler_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga</description>
        <label>Sprinkler Protected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <description>Conga</description>
        <label>Square Footage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Conga</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stories__c</fullName>
        <description>Conga</description>
        <label>Stories</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>Conga</description>
        <formula>BLANKVALUE(Personal_Property_Value__c, 0)  +  BLANKVALUE(Real_Property_Value__c, 0)  +  BLANKVALUE(Building_Improvement__c, 0)  +  BLANKVALUE(Inventory_Value__c, 0)  +  BLANKVALUE(Business_Interruption_Value__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Insured Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Under_Construction__c</fullName>
        <formula>IF(

AND(
NOT(ISNULL( ConstructionStartDate )),
ConstructionStartDate&lt;=TODAY(),
 OR(ConstructionEndDate &gt;TODAY(),ISNULL(ConstructionEndDate))),

TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under Construction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VacCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conga - In order to add relevant data for the Vacated tab in the Insurance Carrier output, we need a field to identify the specific criteria that identify a record’s value as belonging to one or more of those sheets. This field will be marked true when the related record needs to be included.</description>
        <label>VacCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Fire_Sys_Imp_During_Constr__c</fullName>
        <label>Water/Fire Sys Imp During Constr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <description>Conga</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Conga</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sys_DateTime_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sys_DateTime_Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sys_DateTime_Open__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sys_DateTime_Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sys_ParentFlowGUID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>[deprecated] sys_ParentFlowGUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Facility</fullName>
        <active>true</active>
        <label>Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <label>Location</label>
    </recordTypes>
</CustomObject>